--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
     "version": "0.0.1",
     "publisher": "jrock2004",
     "engines": {
-        "vscode": "^1.27.0"
+      "vscode": "^1.27.0"
     },
     "categories": [
-        "Snippets"
+      "Snippets"
     ],
     "contributes": {
-        "snippets": [
-            {
-                "language": "javascript",
-                "path": "./snippets/ember-data.json"
-            }
-        ]
+      "snippets": [
+        {
+          "language": "javascript",
+          "path": "./snippets/ember-data.json"
+        },
+        {
+          "language": "javascript",
+          "path": "./snippets/ember.json"
+        }
+      ]
     }
 }
