--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "vscode-ember-snippets",
     "displayName": "vscode-ember-snippets",
+    "icon": "https://cdn.iconscout.com/icon/free/png-128/ember-1-285993.png",
     "description": "Ember.js ES6 Snippets for Vscode",
     "version": "1.0.0",
     "publisher": "jrock2004",
