--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "vscode-ember-snippets",
     "icon": "images/tomster-logo.png",
     "description": "Ember.js ES6 Snippets for Vscode",
-    "version": "1.1.1",
+    "version": "2.0.0",
     "publisher": "jrock2004",
     "engines": {
       "vscode": "^1.20.0"
@@ -112,6 +112,10 @@
         {
           "language": "javascript",
           "path": "./snippets/import-ember-data.json"
+        },
+        {
+          "language": "javascript",
+          "path": "./snippets/ember-test-helpers.json"
         }
       ]
     }
